[package]
name = "xelis-captcha"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
getrandom = { version = "0.2.15", features = ["js"] }
tokio_with_wasm = { version = "0.7.2", features = ["rt"] }
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.45"
web-time = "1.1.0"
xelis_common = { git = "https://github.com/xelis-project/xelis-blockchain", branch = "network-upgrade", package = "xelis_common" }

[lib]
crate-type = ["cdylib", "rlib"]
